# esgi_rust_project

./: .gitignore  documentation.md
client/: DemoServer.md  update.sh  websocket.html
client/encodings/: RadarView.md
instruction/: .gitignore  FAQ.md  KNOWN_BUGS.md  README.md
instruction/encodings/: Maze.md  binary_text.md
project/: Cargo.toml  README.md
project/client/: Cargo.toml
project/client/src/: main.rs  player.rs  team.rs
project/grid/: Cargo.toml
project/grid/src/: lib.rs  map.rs  maze.rs  radar.rs
project/server/: Cargo.toml
project/server/src/: main.rs
project/shared/src/: lib.rs  messages.rs  network.rs  utils.rs
project/shared/src/types/: action.rs  cardinal_direction.rs  challenge.rs  error.rs  hint.rs  message.rs  mod.rs  orientation.rs  radar.rs
project/shared/src/types/log/: log.rs  macros.rs  mod.rs
support/esgi_rust_live_coding_2024_10_29/: main.rs  structs.rs
support/esgi_rust_live_coding_2024_11_29/: Cargo.toml
support/esgi_rust_live_coding_2024_11_29/shared/src/: lib.rs
support/esgi_rust_live_coding_2024_11_29/src/: div.rs  main.rs  my_error.rs
support/esgi_rust_live_coding_2024_12_17/: Cargo.toml
support/esgi_rust_live_coding_2024_12_17/shared/: Cargo.toml
support/esgi_rust_live_coding_2024_12_17/src/: client.rs  main.rs
support/esgi_rust_live_coding_2025_01_17/: Cargo.toml
support/esgi_rust_live_coding_2025_01_17/src/: main.rs
