[package]
name = "demo-4AL2"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { workspace = true }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1"
#shared = { path = "shared" }

[[bin]]
name = "client"
path = "src/client.rs"

[workspace]
members = ["shared"]

[workspace.dependencies]
shared = { path = "shared"}
serde = "1"